// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden fixtures (plan §1.4: globals-only, overrides-only, mixed) > block-overrides-only fixture HTML matches its snapshot 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html dir="ltr" lang="en">
  <head>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
    <meta name="x-apple-disable-message-reformatting" />
  </head>
  <body dir="ltr" lang="en" style="background-color:#f4f4f4;margin:0;padding:0">
    <!--$--><!--html--><!--head--><!--body-->
    <table
      border="0"
      width="100%"
      cellpadding="0"
      cellspacing="0"
      role="presentation"
      align="center">
      <tbody>
        <tr>
          <td
            dir="ltr"
            lang="en"
            style="background-color:#f4f4f4;margin:0;padding:0">
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#22223b">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:600px;width:100%;background-color:#fff8e7">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:40px;padding-bottom:20px;padding-left:16px;padding-right:16px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:10px;padding-bottom:30px;padding-left:0px;padding-right:0px">
                                    <h1
                                      style="font-family:Helvetica, Arial, sans-serif;color:#4a4e69;text-align:center;font-size:32px;line-height:1.3;font-weight:bold;margin:0">
                                      Spring launch
                                    </h1>
                                    <h2
                                      style="font-family:Helvetica, Arial, sans-serif;color:#4a4e69;text-align:center;font-size:24px;line-height:1.3;font-weight:bold;margin:0">
                                      Everything new
                                    </h2>
                                    <h3
                                      style="font-family:Helvetica, Arial, sans-serif;color:#4a4e69;text-align:center;font-size:20px;line-height:1.3;font-weight:bold;margin:0">
                                      In one place
                                    </h3>
                                    <p
                                      style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#4a4e69;text-align:center;margin-top:0;margin-bottom:0">
                                      Plain, <strong>bold</strong>,
                                      <em>italic</em>,
                                      <span style="text-decoration:underline"
                                        >underlined</span
                                      >,
                                      <span style="text-decoration:line-through"
                                        >struck</span
                                      ><br /><a
                                        href="https://example.com/launch"
                                        style="color:#067df7;text-decoration-line:none;text-decoration:underline"
                                        target="_blank"
                                        ><em
                                          ><strong>bold italic link</strong></em
                                        ></a
                                      >.
                                    </p>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                    <a
                                      href="https://example.com/gallery"
                                      style="color:#067df7;text-decoration-line:none"
                                      target="_blank"
                                      ><img
                                        alt="Product hero"
                                        src="https://example.com/images/hero.png"
                                        style="display:block;outline:none;border:none;text-decoration:none;max-width:100%;height:auto;margin-left:0;margin-right:auto"
                                        width="480"
                                    /></a>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:12px;padding-bottom:12px;padding-left:0px;padding-right:0px">
                                    <hr
                                      style="width:100%;border:none;border-color:transparent;border-top:4px solid #c9ada7;margin:0" />
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#f4f4f4">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:600px;width:100%;background-color:#ffffff">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:24px;padding-bottom:0px;padding-left:24px;padding-right:24px">
                            <table
                              role="presentation"
                              width="100%"
                              cellpadding="0"
                              cellspacing="0"
                              style="border-collapse:collapse">
                              <tbody>
                                <tr>
                                  <td
                                    style="padding-top:8px;padding-bottom:8px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="width:65%;vertical-align:middle;background-color:#eef0f2;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:12px">
                                            <table
                                              align="center"
                                              width="100%"
                                              border="0"
                                              cellpadding="0"
                                              cellspacing="0"
                                              role="presentation">
                                              <tbody style="width:100%">
                                                <tr style="width:100%">
                                                  <td
                                                    data-id="__react-email-column"
                                                    style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                                    <p
                                                      style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:left;margin-top:0;margin-bottom:0">
                                                      Side-by-side copy.
                                                    </p>
                                                  </td>
                                                </tr>
                                              </tbody>
                                            </table>
                                          </td>
                                          <td
                                            data-id="__react-email-column"
                                            style="width:35%;vertical-align:bottom;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                            <table
                                              align="center"
                                              width="100%"
                                              border="0"
                                              cellpadding="0"
                                              cellspacing="0"
                                              role="presentation">
                                              <tbody style="width:100%">
                                                <tr style="width:100%">
                                                  <td
                                                    data-id="__react-email-column"
                                                    style="padding-top:0px;padding-bottom:4px;padding-left:0px;padding-right:0px;text-align:right">
                                                    <a
                                                      href="https://example.com/shop"
                                                      style="line-height:100%;text-decoration:none;display:inline-block;max-width:100%;mso-padding-alt:0px;background-color:#4a4e69;color:#f2e9e4;border-radius:0px;border:3px solid #9a8c98;padding:16px 40px;font-family:Courier New, Courier, monospace;padding-top:16px;padding-right:40px;padding-bottom:16px;padding-left:40px"
                                                      target="_blank"
                                                      ><span
                                                        ><!--[if mso]><i style="mso-font-width:500%;mso-text-raise:24px" hidden>&#8202;&#8202;&#8202;&#8202;</i><![endif]--></span
                                                      ><span
                                                        style="max-width:100%;display:inline-block;line-height:120%;mso-padding-alt:0px;mso-text-raise:12px"
                                                        >Shop the launch</span
                                                      ><span
                                                        ><!--[if mso]><i style="mso-font-width:500%" hidden>&#8202;&#8202;&#8202;&#8202;&#8203;</i><![endif]--></span
                                                      ></a
                                                    >
                                                  </td>
                                                </tr>
                                              </tbody>
                                            </table>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <!--/$-->
  </body>
</html>
"
`;

exports[`golden fixtures (plan §1.4: globals-only, overrides-only, mixed) > globals-only fixture HTML matches its snapshot 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html dir="ltr" lang="en">
  <head>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
    <meta name="x-apple-disable-message-reformatting" />
  </head>
  <body dir="ltr" lang="en" style="background-color:#0b0b14;margin:0;padding:0">
    <!--$--><!--html--><!--head--><!--body-->
    <table
      border="0"
      width="100%"
      cellpadding="0"
      cellspacing="0"
      role="presentation"
      align="center">
      <tbody>
        <tr>
          <td
            dir="ltr"
            lang="en"
            style="background-color:#0b0b14;margin:0;padding:0">
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#0b0b14">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:640px;width:100%;background-color:#f8f7f2">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:32px;padding-bottom:0px;padding-left:32px;padding-right:32px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:0px;padding-bottom:32px;padding-left:0px;padding-right:0px">
                                    <h1
                                      style="font-family:Georgia, serif;color:#1d3557;text-align:center;font-size:32px;line-height:1.3;font-weight:bold;margin:0">
                                      Spring launch
                                    </h1>
                                    <h2
                                      style="font-family:Georgia, serif;color:#457b9d;text-align:center;font-size:24px;line-height:1.3;font-weight:bold;margin:0">
                                      Everything new
                                    </h2>
                                    <h3
                                      style="font-family:Helvetica, Arial, sans-serif;color:#2a2a2a;text-align:right;font-size:20px;line-height:1.3;font-weight:bold;margin:0">
                                      In one place
                                    </h3>
                                    <p
                                      style="font-size:14px;line-height:24px;font-family:Verdana, Geneva, sans-serif;color:#333c44;text-align:left;margin-top:0;margin-bottom:0">
                                      Plain, <strong>bold</strong>,
                                      <em>italic</em>,
                                      <span style="text-decoration:underline"
                                        >underlined</span
                                      >,
                                      <span style="text-decoration:line-through"
                                        >struck</span
                                      ><br /><a
                                        href="https://example.com/launch"
                                        style="color:#e63946;text-decoration-line:none;text-decoration:underline"
                                        target="_blank"
                                        ><em
                                          ><strong>bold italic link</strong></em
                                        ></a
                                      >.
                                    </p>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:0px;padding-bottom:32px;padding-left:0px;padding-right:0px">
                                    <img
                                      alt="Product hero"
                                      src="https://example.com/images/hero.png"
                                      style="display:block;outline:none;border:none;text-decoration:none;max-width:100%;height:auto;margin-left:auto;margin-right:auto" />
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:0px;padding-bottom:32px;padding-left:0px;padding-right:0px">
                                    <hr
                                      style="width:100%;border:none;border-color:transparent;border-top:1px solid #1d3557;margin:0" />
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#0b0b14">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:640px;width:100%;background-color:#f8f7f2">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:32px;padding-bottom:0px;padding-left:32px;padding-right:32px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="vertical-align:top;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:32px;padding-left:0px;padding-right:0px">
                                            <p
                                              style="font-size:14px;line-height:24px;font-family:Verdana, Geneva, sans-serif;color:#333c44;text-align:left;margin-top:0;margin-bottom:0">
                                              Side-by-side copy.
                                            </p>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                  <td
                                    data-id="__react-email-column"
                                    style="vertical-align:top;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:32px;padding-left:0px;padding-right:0px;text-align:left">
                                            <a
                                              href="https://example.com/shop"
                                              style="line-height:100%;text-decoration:none;display:inline-block;max-width:100%;mso-padding-alt:0px;background-color:#e63946;color:#fffdf5;border-radius:999px;border:2px solid #8d0801;padding:14px 32px;font-family:Georgia, serif;padding-top:14px;padding-right:32px;padding-bottom:14px;padding-left:32px"
                                              target="_blank"
                                              ><span
                                                ><!--[if mso]><i style="mso-font-width:400%;mso-text-raise:21px" hidden>&#8202;&#8202;&#8202;&#8202;</i><![endif]--></span
                                              ><span
                                                style="max-width:100%;display:inline-block;line-height:120%;mso-padding-alt:0px;mso-text-raise:10.5px"
                                                >Shop the launch</span
                                              ><span
                                                ><!--[if mso]><i style="mso-font-width:400%" hidden>&#8202;&#8202;&#8202;&#8202;&#8203;</i><![endif]--></span
                                              ></a
                                            >
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <!--/$-->
  </body>
</html>
"
`;

exports[`golden fixtures (plan §1.4: globals-only, overrides-only, mixed) > mixed fixture HTML matches its snapshot 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html dir="ltr" lang="en">
  <head>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
    <meta name="x-apple-disable-message-reformatting" />
  </head>
  <body dir="ltr" lang="en" style="background-color:#eef1f4;margin:0;padding:0">
    <!--$--><!--html--><!--head--><!--body-->
    <table
      border="0"
      width="100%"
      cellpadding="0"
      cellspacing="0"
      role="presentation"
      align="center">
      <tbody>
        <tr>
          <td
            dir="ltr"
            lang="en"
            style="background-color:#eef1f4;margin:0;padding:0">
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#00296b">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:600px;width:100%;background-color:#ffffff">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:36px;padding-bottom:0px;padding-left:24px;padding-right:24px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                    <h1
                                      style="font-family:Helvetica, Arial, sans-serif;color:#00296b;text-align:left;font-size:32px;line-height:1.3;font-weight:bold;margin:0">
                                      Spring launch
                                    </h1>
                                    <h2
                                      style="font-family:Helvetica, Arial, sans-serif;color:#111111;text-align:left;font-size:24px;line-height:1.3;font-weight:bold;margin:0">
                                      Everything new
                                    </h2>
                                    <h3
                                      style="font-family:Helvetica, Arial, sans-serif;color:#111111;text-align:left;font-size:20px;line-height:1.3;font-weight:bold;margin:0">
                                      In one place
                                    </h3>
                                    <p
                                      style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#2f3e46;text-align:left;margin-top:0;margin-bottom:0">
                                      Plain, <strong>bold</strong>,
                                      <em>italic</em>,
                                      <span style="text-decoration:underline"
                                        >underlined</span
                                      >,
                                      <span style="text-decoration:line-through"
                                        >struck</span
                                      ><br /><a
                                        href="https://example.com/launch"
                                        style="color:#0057b7;text-decoration-line:none;text-decoration:underline"
                                        target="_blank"
                                        ><em
                                          ><strong>bold italic link</strong></em
                                        ></a
                                      >.
                                    </p>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                    <img
                                      alt="Product hero"
                                      src="https://example.com/images/hero.png"
                                      style="display:block;outline:none;border:none;text-decoration:none;max-width:100%;height:auto;margin-left:auto;margin-right:auto"
                                      width="520" />
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                    <hr
                                      style="width:100%;border:none;border-color:transparent;border-top:2px solid #c5d1de;margin:0" />
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#eef1f4">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:600px;width:100%;background-color:#ffffff">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:24px;padding-bottom:0px;padding-left:24px;padding-right:24px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="width:55%;vertical-align:top;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                            <p
                                              style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#2f3e46;text-align:left;margin-top:0;margin-bottom:0">
                                              Side-by-side copy.
                                            </p>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                  <td
                                    data-id="__react-email-column"
                                    style="width:45%;vertical-align:middle;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px;text-align:center">
                                            <a
                                              href="https://example.com/shop"
                                              style="line-height:100%;text-decoration:none;display:inline-block;max-width:100%;mso-padding-alt:0px;background-color:#ffd500;color:#00296b;border-radius:4px;padding:12px 24px;font-family:Helvetica, Arial, sans-serif;padding-top:12px;padding-right:24px;padding-bottom:12px;padding-left:24px"
                                              target="_blank"
                                              ><span
                                                ><!--[if mso]><i style="mso-font-width:400%;mso-text-raise:18px" hidden>&#8202;&#8202;&#8202;</i><![endif]--></span
                                              ><span
                                                style="max-width:100%;display:inline-block;line-height:120%;mso-padding-alt:0px;mso-text-raise:9px"
                                                >Shop the launch</span
                                              ><span
                                                ><!--[if mso]><i style="mso-font-width:400%" hidden>&#8202;&#8202;&#8202;&#8203;</i><![endif]--></span
                                              ></a
                                            >
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <!--/$-->
  </body>
</html>
"
`;

exports[`golden fixtures (plan §1.4: globals-only, overrides-only, mixed) > sample-document fixture HTML matches its snapshot 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html dir="ltr" lang="en">
  <head>
    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
    <meta name="x-apple-disable-message-reformatting" />
  </head>
  <body dir="ltr" lang="en" style="background-color:#f4f4f4;margin:0;padding:0">
    <!--$--><!--html--><!--head--><!--body-->
    <table
      border="0"
      width="100%"
      cellpadding="0"
      cellspacing="0"
      role="presentation"
      align="center">
      <tbody>
        <tr>
          <td
            dir="ltr"
            lang="en"
            style="background-color:#f4f4f4;margin:0;padding:0">
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#f4f4f4">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:600px;width:100%;background-color:#ffffff">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:24px;padding-bottom:0px;padding-left:24px;padding-right:24px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:24px;padding-bottom:12px;padding-left:0px;padding-right:0px">
                                    <h1
                                      style="font-family:Helvetica, Arial, sans-serif;color:#111111;text-align:center;font-size:32px;line-height:1.3;font-weight:bold;margin:0">
                                      Welcome to Tandem
                                    </h1>
                                    <p
                                      style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:left;margin-top:0;margin-bottom:0">
                                      You describe,
                                      <strong>your partner builds</strong> —
                                      read the
                                      <a
                                        href="https://example.com/docs"
                                        style="color:#067df7;text-decoration-line:none;text-decoration:underline"
                                        target="_blank"
                                        >docs</a
                                      >.
                                    </p>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                    <img
                                      alt="Two riders on a tandem bicycle"
                                      src="https://placehold.co/600x400"
                                      style="display:block;outline:none;border:none;text-decoration:none;max-width:100%;height:auto;margin-left:auto;margin-right:auto"
                                      width="520" />
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="padding-top:16px;padding-bottom:16px;padding-left:0px;padding-right:0px">
                                    <hr
                                      style="width:100%;border:none;border-color:transparent;border-top:1px solid #e6e6e6;margin:0" />
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              align="center"
              width="100%"
              border="0"
              cellpadding="0"
              cellspacing="0"
              role="presentation"
              style="background-color:#f4f4f4">
              <tbody>
                <tr>
                  <td>
                    <table
                      align="center"
                      width="100%"
                      border="0"
                      cellpadding="0"
                      cellspacing="0"
                      role="presentation"
                      style="max-width:600px;width:100%;background-color:#fafafa">
                      <tbody>
                        <tr style="width:100%">
                          <td
                            style="padding-top:24px;padding-bottom:0px;padding-left:24px;padding-right:24px">
                            <table
                              align="center"
                              width="100%"
                              border="0"
                              cellpadding="0"
                              cellspacing="0"
                              role="presentation">
                              <tbody style="width:100%">
                                <tr style="width:100%">
                                  <td
                                    data-id="__react-email-column"
                                    style="width:60%;vertical-align:middle;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px">
                                            <p
                                              style="font-size:14px;line-height:24px;font-family:Helvetica, Arial, sans-serif;color:#333333;text-align:left;margin-top:0;margin-bottom:0">
                                              <em>Ready to ride?</em><br />Grab
                                              a seat on the right.
                                            </p>
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                  <td
                                    data-id="__react-email-column"
                                    style="width:40%;vertical-align:middle;padding-top:0px;padding-bottom:0px;padding-left:0px;padding-right:0px">
                                    <table
                                      align="center"
                                      width="100%"
                                      border="0"
                                      cellpadding="0"
                                      cellspacing="0"
                                      role="presentation">
                                      <tbody style="width:100%">
                                        <tr style="width:100%">
                                          <td
                                            data-id="__react-email-column"
                                            style="padding-top:0px;padding-bottom:24px;padding-left:0px;padding-right:0px;text-align:center">
                                            <a
                                              href="https://example.com/start"
                                              style="line-height:100%;text-decoration:none;display:inline-block;max-width:100%;mso-padding-alt:0px;background-color:#1a1a2e;color:#ffffff;border-radius:4px;padding:12px 24px;font-family:Helvetica, Arial, sans-serif;padding-top:12px;padding-right:24px;padding-bottom:12px;padding-left:24px"
                                              target="_blank"
                                              ><span
                                                ><!--[if mso]><i style="mso-font-width:400%;mso-text-raise:18px" hidden>&#8202;&#8202;&#8202;</i><![endif]--></span
                                              ><span
                                                style="max-width:100%;display:inline-block;line-height:120%;mso-padding-alt:0px;mso-text-raise:9px"
                                                >Get started</span
                                              ><span
                                                ><!--[if mso]><i style="mso-font-width:400%" hidden>&#8202;&#8202;&#8202;&#8203;</i><![endif]--></span
                                              ></a
                                            >
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <!--/$-->
  </body>
</html>
"
`;
